--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
     <div id="container">
       <%= render :partial => 'fragments/top' %>
       <div id="wrapper" class="wat-cf">
-        <div id="main" style="width: 100%;" data-pjax-container="true">
+        <div id="main" data-pjax-container="true">
           <%= flash_display 'flash' %>          
           <%= yield %>
         </div>
