--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -2,13 +2,20 @@
 * This is a manifest file that'll automatically include all the stylesheets available in this directory
 * and any sub-directories. You're free to add application-wide styles to this file and they'll appear at
 * the top of the compiled file, but it's generally better to create a new file per style scope.
+
 *= require normalize
+
 *= require theme/base
-*= require theme/default
+*= require theme/theme
 *= require theme/error_explanation
+*= require theme/public
+*= require theme/application
+
 *= require pages/home
 *= require pages/team
 *= require pages/help
+*= require pages/edit_account
+
 *= require active_scaffold
 *= require overrides
 *= require slides
