--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -6,7 +6,7 @@
     <%= javascript_include_tag "application" %>
     <%= csrf_meta_tag %>
   </head>
-  <body class="home-page">
+  <body class="public">
 
     <div id="container">
       <%= render :partial => 'fragments/top' %>
