--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="block home-page-block">
+<div class="block home-page-block article">
   <div class="content">
     <h1>Totally Free DNS service for Geeks <small>created by Geeks</small></h1>
     <div class="inner home-page-inner">
