--- a/app/views/fragments/_top.html.erb
+++ b/app/views/fragments/_top.html.erb
@@ -6,18 +6,23 @@
         <% if user_signed_in? %>
           <li><%#= link_to('Dashboard', dashboard_path, :data => {:pjax => '#main'}) %></li>
           <li><%= link_to 'Manage Domains', domains_path, :data => {:pjax => '#main'} %></li>
+          <li><%= link_to 'Manage Hosts', hosts_path, :data => {:pjax => '#main'} %></li>
         <% else %>
           <li><%= link_to('Home', root_path, :data => {:pjax => '#main'}) %></li>
+          <li><%= link_to('About', page_path('about'), :data => {:pjax => '#main'}) %></li>
+          <li><%= link_to('Team', page_path('team'), :data => {:pjax => '#main'}) %></li>
+          <li><%= link_to('Contact', page_path('contact'), :data => {:pjax => '#main'}) %></li>
+          <li><%= link_to('Help & Support', page_path('help'), :data => {:pjax => '#main'}) %></li>
         <% end %>
-        <li><%= link_to('About', page_path('about'), :data => {:pjax => '#main'}) %></li>
-        <li><%= link_to('Team', page_path('team'), :data => {:pjax => '#main'}) %></li>
-        <li><%= link_to('Contact', page_path('contact'), :data => {:pjax => '#main'}) %></li>
-        <li><%= link_to('Help & Support', page_path('help'), :data => {:pjax => '#main'}) %></li>
       </ul>
     </div>
     <div id="user-navigation">
       <ul class="wat-cf">
         <% if user_signed_in? %>
+          <li><%= link_to('About', page_path('about'), :data => {:pjax => '#main'}) %></li>
+          <li><%= link_to('Team', page_path('team'), :data => {:pjax => '#main'}) %></li>
+          <li><%= link_to('Contact', page_path('contact'), :data => {:pjax => '#main'}) %></li>
+          <li><%= link_to('Help & Support', page_path('help'), :data => {:pjax => '#main'}) %></li>
           <li><%= link_to(current_user.email, edit_user_registration_path, :title => "IP: #{client_remote_ip}", :data => {:pjax => '#main'}) %></li>
           <li><%= link_to('Sign out', destroy_user_session_path, :method => :delete) %></li>
         <% else %>
