--- a/app/views/pages/help.html.erb
+++ b/app/views/pages/help.html.erb
@@ -51,6 +51,12 @@
       <h3>What is a minimum TTL for a domain record?</h3>
       <p>60 seconds</p>
 
+      <h3>Do you offer domain names?</h3>
+      <p>
+        We offer free subdomains on our <strong>entrydns.org</strong> domain
+        in the form <strong>yourname.entrydns.org</strong>
+      </p>
+
     </div>
   </div>
 </div>
