--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -5,8 +5,11 @@
       <h1>Contact us</h1>
 
       <p>
-        E-Mail address: <a href="mailto:support@entrydns.net">support@entrydns.net</a>
+        Our email address is <a href="mailto:support@entrydns.net">support@entrydns.net</a> ,
+        or you can contact us using the form below:
       </p>
+
+      <%= render :partial => 'pages/contact/form' %>
 
     </div>
   </div>
