--- a/app/assets/stylesheets/theme/error_explanation.css.scss
+++ b/app/assets/stylesheets/theme/error_explanation.css.scss
@@ -1,14 +1,24 @@
 @import 'compass/css3/border-radius';
+@import 'compass/css3/text-shadow';
 
-#main .block .content #error_explanation {
-    @include border-top-radius(6px);
-    border-left: 1px solid #993624;
-    border-right: 1px solid #993624;
-    border-bottom: 1px solid #993624;
-    h2 {
-        background-color: #cc4831;
+#main .block .content {
+    #error_explanation {
+        @include border-top-radius(6px);
+        border-left: 1px solid #993624;
+        border-right: 1px solid #993624;
+        border-bottom: 1px solid #993624;
+        h2 {
+            background-color: #cc4831;
+            color: white;
+            padding: 10px 15px;
+            margin: 0;
+            @include text-shadow(none);
+            @include border-top-radius(6px);
+        }
     }
     .field_with_errors {
+        display: inline;
+        
         label {
             color: #cc4831;
         }
