--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -5,7 +5,7 @@
       <h1>Contact us</h1>
 
       <p>
-        Our email address is <a href="mailto:support@entrydns.net">support@entrydns.net</a> ,
+        Our email address is <%= mail_to Settings.support_mail %> ,
         or you can contact us using the form below:
       </p>
 
