--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -5,16 +5,17 @@
       <h1>About EntryDNS</h1>
 
       <p>
-        EntryDNS delivers a totally free DNS hosting to our community. 
+        EntryDNS delivers a totally free DNS management service for your enjoyment. 
         <br />
-        Our aim is to provide a very friendly, but powerful service for your DNS management.
+        Our aim is to provide a friendly and caring, yet powerful service for your DNS needs.
       </p>
 
       <h2>What you can use it for</h2>
 
       <p>
-        This allows you to simply create a host or host your own domains, 
-        which can be managed from the web application or using our API's (simple API and complete REST API). 
+        With our service you can create hosts or host your own domains, 
+        manage them from the web application or use our API's (simple API and complete REST API)
+        to automate tasks as you wish.
         <br />
         The service gives you a total control of your DNS records without any restrictions.
       </p>
