--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,6 +6,8 @@
 
       <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
         <%= devise_error_messages! %>
+      
+        <%= honeypot %>
 
         <div><%= f.label :first_name %><br />
           <%= f.text_field :first_name %></div>
