--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,6 +7,8 @@
         <tr>
           <td class="home-page-text">
             <%= render :partial => 'pages/home/headlines' %>
+            <br />
+            <%= render :partial => 'pages/fragments/action' %>
           </td>
           <td class="home-page-images">
             <%= render :partial => 'pages/home/slides' %>
@@ -27,7 +29,7 @@
           <td class="home-page-text">
             <h2>Benefits</h2>
             <%= render 'pages/fragments/benefits' %>
-            <br /><br /><br /><br />
+            <br /><br />
             <%= render :partial => 'pages/fragments/action' %>
           </td>
           <td class="home-page-images">
