--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -22,7 +22,7 @@
 
 <div class="block">
   <div class="content">
-    <div class="inner">
+    <div class="inner home-page-second">
 
       <table class="home-page-duo">
         <tr>
