--- a/app/assets/stylesheets/pages/home.css.scss
+++ b/app/assets/stylesheets/pages/home.css.scss
@@ -91,3 +91,10 @@
         }
     }
 }
+
+.home-page-second {
+    h2 {
+        text-align: center;
+        border-bottom: 1px solid #eee;
+    }
+}
