--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -20,6 +20,25 @@
   </div>
 </div>
 
+<table class="home-page-duo">
+  <tr>
+    <td>
+      <blockquote>
+        "I use EntryDNS to showcase work to my clients directly from my computer.
+        I set up my domain some time ago and it's working great ever since!" <br />
+        <strong>Nicolae Claudius, Web Developer</strong>      
+      </blockquote>
+    </td>
+    <td>
+      <blockquote>
+        "I use EntryDNS because it's trustworthy and I like the fast, snappy interface! 
+        And I can also interface it via the API to automate most of the tasks!" <br />
+        <strong>Vaidas Jablonski, DevOps</strong>
+      </blockquote>
+    </td>
+  </tr>
+</table>
+
 <div class="block">
   <div class="content">
     <div class="inner home-page-second">
