--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -33,7 +33,7 @@
       <blockquote>
         "I use EntryDNS because it's trustworthy and I like the fast, snappy interface! 
         And I can also interface it via the API to automate most of the tasks!" <br />
-        <strong>Vaidas Jablonski, DevOps</strong>
+        <strong>Vaidas Jablonskis, DevOps</strong>
       </blockquote>
     </td>
   </tr>
