--- a/app/views/pages/help.html.erb
+++ b/app/views/pages/help.html.erb
@@ -9,6 +9,7 @@
       <h3>I have an idea for an EntryDNS feature, who can I tell about it?</h3>
       <p>
         We’d love to hear your idea. Please send an email to <%= mail_to Settings.support_mail %>
+        or use our <%= link_to 'contact form', page_path('contact') %>.
       </p>
       
       <h3>What support can I expect?</h3>
@@ -20,6 +21,7 @@
       <h3>How can I contact you if I have a question?</h3>
       <ul>
         <li>Email: <%= mail_to Settings.support_mail %></li>
+        <li>Web: <%= link_to 'contact form', page_path('contact') %></li>
         <li>IRC: #entrydns on irc.freenode.net</li>
       </ul>
 
