slides, logo outline

--- a/app/views/pages/home/_slides.html.erb
+++ b/app/views/pages/home/_slides.html.erb
@@ -1,6 +1,8 @@
 <div id="slidesWrapper">
   <div id="slides">
     <%= image_tag 'marketing/domains.jpg' %>
+    <%= image_tag 'marketing/records.jpg' %>
+    <%= image_tag 'marketing/domain.new.jpg' %>
     <%= image_tag 'marketing/hosts.jpg' %>
   </div>
 </div>
