--- a/app/assets/stylesheets/theme/theme.css.scss
+++ b/app/assets/stylesheets/theme/theme.css.scss
@@ -45,6 +45,7 @@ hr {
         color: #53d4ff;
         border: 6px solid #53d4ff;
         padding: 0 10px;
+        outline: none;
         @include border-radius(15px);
         @include text-shadow(0 1px 0 rgba(0, 0, 0, 0.6),0 0 6px rgba(143, 181, 200, 1),0 0 30px rgba(143, 181, 200, .7));
         @include box-shadow(0 1px 0 rgba(0, 0, 0, 0.6),0 0 6px rgba(143, 181, 200, 1),0 0 30px rgba(143, 181, 200, .7));
