--- a/app/views/fragments/_top.html.erb
+++ b/app/views/fragments/_top.html.erb
@@ -21,7 +21,7 @@
         <li>
           <script src="//platform.twitter.com/widgets.js" type="text/javascript"></script>
           <%= link_to 'Tweet',
-            "https://twitter.com/share?text=EntryDNS a nice free DNS management service&url=#{root_url}",
+            "https://twitter.com/share?text=EntryDNS a nice free DNS service&url=#{root_url}",
             :class => "twitter-share-button" %>
         </li>
         <% if user_signed_in? %>
