--- a/app/assets/stylesheets/pages/home.css.scss
+++ b/app/assets/stylesheets/pages/home.css.scss
@@ -85,6 +85,8 @@
         
         a {
             @include button(#7a43b6, #fff, 0 -1px 1px rgba(0,0,0,.4));
+            border-right: 2px solid darken(#7a43b6, 20);
+            border-bottom: 2px solid darken(#7a43b6, 20);
             
             width: 250px;
             height: 40px;
