use &bull; instead of &bullet;

--- a/app/views/fragments/_bottom.html.erb
+++ b/app/views/fragments/_bottom.html.erb
@@ -2,10 +2,10 @@
   <div class="block">
     <br />
     <p>
-      <%= link_to('Terms & Conditions', page_path('terms'), :data => {:pjax => '#main'}) %> &bullet;
-      <%= link_to('Privacy Policy', page_path('privacy'), :data => {:pjax => '#main'}) %> &bullet;
-      <%= link_to('Contact', page_path('contact'), :data => {:pjax => '#main'}) %> &bullet;
-      <%= link_to('About', page_path('about'), :data => {:pjax => '#main'}) %> &bullet;
+      <%= link_to('Terms & Conditions', page_path('terms'), :data => {:pjax => '#main'}) %> &bull;
+      <%= link_to('Privacy Policy', page_path('privacy'), :data => {:pjax => '#main'}) %> &bull;
+      <%= link_to('Contact', page_path('contact'), :data => {:pjax => '#main'}) %> &bull;
+      <%= link_to('About', page_path('about'), :data => {:pjax => '#main'}) %> &bull;
       <%= link_to("&copy; #{Time.now.year} EntryDNS Team".html_safe, page_path('team'), :data => {:pjax => '#main'}) %>
     </p>
   </div>      
