small disclamer on front page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -24,16 +24,14 @@
   <tr>
     <td>
       <blockquote>
-        "I use EntryDNS to showcase work to my clients directly from my computer.
-        I set up my domain some time ago and it's working great ever since!" <br />
-        <strong>Nicolae Claudius, Web Developer</strong>      
+        * We are two geeks who built a free DNS service to fill a void in this space. <br />
+        * The service is free and we hope to support it on either a freemium model or some sort of affiliate sales.
       </blockquote>
     </td>
     <td>
       <blockquote>
-        "I use EntryDNS because it's trustworthy and I like the fast, snappy interface! 
-        And I can also interface it via the API to automate most of the tasks!" <br />
-        <strong>Vaidas Jablonskis, DevOps</strong>
+        * Note that we just started it, and there are still things to be done, it's still a work in progress.<br />
+        * Nevertheless the service is at this point functional and there are people already using it.
       </blockquote>
     </td>
   </tr>
