--- a/app/views/pages/terms.html.erb
+++ b/app/views/pages/terms.html.erb
@@ -39,7 +39,10 @@
           </ol>
         </li>
         <li>
-          This license shall automatically terminate if you violate any of these restrictions and may be terminated by EntryDNS at any time. Upon terminating your viewing of these materials or upon the termination of this license, you must destroy any downloaded materials in your possession whether in electronic or printed format.
+          This license shall automatically terminate if you violate any of these restrictions and 
+          may be terminated by EntryDNS at any time. Upon terminating your viewing of these materials 
+          or upon the termination of this license, you must destroy any downloaded materials in your 
+          possession whether in electronic or printed format.
         </li>
       </ol>
 
@@ -49,7 +52,20 @@
 
       <ol type="a">
         <li>
-          The materials on EntryDNS web site are provided "as is". EntryDNS makes no warranties, expressed or implied, and hereby disclaims and negates all other warranties, including without limitation, implied warranties or conditions of merchantability, fitness for a particular purpose, or non-infringement of intellectual property or other violation of rights. Further, EntryDNS does not warrant or make any representations concerning the accuracy, likely results, or reliability of the use of the materials on its Internet web site or otherwise relating to such materials or on any sites linked to this site.
+          The materials on EntryDNS web site are provided "as is". EntryDNS makes no warranties, 
+          expressed or implied, and hereby disclaims and negates all other warranties, including 
+          without limitation, implied warranties or conditions of merchantability, fitness for a 
+          particular purpose, or non-infringement of intellectual property or other violation of 
+          rights. Further, EntryDNS does not warrant or make any representations concerning the 
+          accuracy, likely results, or reliability of the use of the materials on its Internet 
+          web site or otherwise relating to such materials or on any sites linked to this site.
+        </li>
+        <li>
+          EntryDNS is not responsible for information in the DNS zones. In case of a complain, 
+          the user account information and the email address in the SOA record shall be used.
+          By registering a zone or adding a record to EntryDNS DNS servers you agree that 
+          you are the owner of the zone and you have all rights to use the information of 
+          you insert into EntryDNS system, i. e. domain names, hostnames, email addresses etc.
         </li>
       </ol>
 
@@ -58,7 +74,12 @@
       </h3>
 
       <p>
-        In no event shall EntryDNS or its suppliers be liable for any damages (including, without limitation, damages for loss of data or profit, or due to business interruption,) arising out of the use or inability to use the materials on EntryDNS Internet site, even if EntryDNS or a EntryDNS authorized representative has been notified orally or in writing of the possibility of such damage. Because some jurisdictions do not allow limitations on implied warranties, or limitations of liability for consequential or incidental damages, these limitations may not apply to you.
+        In no event shall EntryDNS or its suppliers be liable for any damages (including, without 
+        limitation, damages for loss of data or profit, or due to business interruption,) arising 
+        out of the use or inability to use the materials on EntryDNS Internet site, even if EntryDNS 
+        or a EntryDNS authorized representative has been notified orally or in writing of the possibility 
+        of such damage. Because some jurisdictions do not allow limitations on implied warranties, or 
+        limitations of liability for consequential or incidental damages, these limitations may not apply to you.
       </p>
 
       <h3>
@@ -66,7 +87,11 @@
       </h3>
 
       <p>
-        The materials appearing on EntryDNS web site could include technical, typographical, or photographic errors. EntryDNS does not warrant that any of the materials on its web site are accurate, complete, or current. EntryDNS may make changes to the materials contained on its web site at any time without notice. EntryDNS does not, however, make any commitment to update the materials.
+        The materials appearing on EntryDNS web site could include technical, typographical, or 
+        photographic errors. EntryDNS does not warrant that any of the materials on its web site 
+        are accurate, complete, or current. EntryDNS may make changes to the materials contained 
+        on its web site at any time without notice. EntryDNS does not, however, make any commitment 
+        to update the materials.
       </p>
 
       <h3>
@@ -74,7 +99,10 @@
       </h3>
 
       <p>
-        EntryDNS has not reviewed all of the sites linked to its Internet web site and is not responsible for the contents of any such linked site. The inclusion of any link does not imply endorsement by EntryDNS of the site. Use of any such linked web site is at the user's own risk.
+        EntryDNS has not reviewed all of the sites linked to its Internet web site and is not 
+        responsible for the contents of any such linked site. The inclusion of any link does 
+        not imply endorsement by EntryDNS of the site. Use of any such linked web site is at 
+        the user's own risk.
       </p>
 
       <h3>
@@ -82,7 +110,9 @@
       </h3>
 
       <p>
-        EntryDNS may revise these terms of use for its web site at any time without notice. By using this web site you are agreeing to be bound by the then current version of these Terms and Conditions of Use.
+        EntryDNS may revise these terms of use for its web site at any time without notice. 
+        By using this web site you are agreeing to be bound by the then current version of these 
+        Terms and Conditions of Use.
       </p>
 
       <h3>
@@ -90,7 +120,8 @@
       </h3>
 
       <p>
-        Any claim relating to EntryDNS web site shall be governed by the laws of the United Kingdom without regard to its conflict of law provisions.
+        Any claim relating to EntryDNS web site shall be governed by the laws of the United Kingdom 
+        without regard to its conflict of law provisions.
       </p>
 
     </div>
