--- a/app/assets/stylesheets/overrides.css.erb
+++ b/app/assets/stylesheets/overrides.css.erb
@@ -18,7 +18,8 @@ body.errors #main .inner {
   margin-top: 15px;
 }
 
-#as_domains-active-scaffold .name-column {
+#as_domains-active-scaffold .name-column, 
+#as_hosts-active-scaffold .name-column {
   font-weight: bold;
 }
 
