--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,6 +16,7 @@
 *= require pages/help
 *= require pages/edit_account
 *= require pages/contact
+*= require pages/donate
 
 *= require active_scaffold
 *= require overrides
