--- a/app/views/pages/fragments/_features.html.erb
+++ b/app/views/pages/fragments/_features.html.erb
@@ -3,7 +3,7 @@
   <li>Dynamic DNS record updates</li>
   <li>Simple API for users to update/change DNS records</li>
   <li>REST API for power users to update/change DNS records</li>
-  <li>Supported DNS record types: SOA, A, CNAME, TXT, MX, NS</li>
+  <li>Record types: SOA, NS, A, CNAME, AAAA, MX, TXT, SRV</li>
   <li>Unlimited subdomain hosting</li>
   <li>Very low TTL values</li>
 </ul>
