--- a/app/views/pages/help.html.erb
+++ b/app/views/pages/help.html.erb
@@ -29,6 +29,7 @@
       <ul>
         <li>ns1.entrydns.net</li>
         <li>ns2.entrydns.net</li>
+        <li>ns3.entrydns.net</li>
       </ul>
 
       <h3>How can I update my domain record dynamically?</h3>
@@ -45,7 +46,7 @@
       </div>
 
       <h3>What domain record types do you currently support?</h3>
-      <p>SOA, NS, A, CNAME, TXT (more coming soon)</p>
+      <p>SOA, NS, A, CNAME, AAAA, MX, TXT, SRV (more coming soon)</p>
 
       <h3>Can I set individual TTL for each record?</h3>
       <p>Yes, you certainly can.</p>
