--- a/app/assets/stylesheets/ui/buttons.css.scss
+++ b/app/assets/stylesheets/ui/buttons.css.scss
@@ -19,7 +19,12 @@
   color: $textColor;
   line-height: 20px;
   @include border-radius($borderRadius);
-  @include box-shadow(inset 0 1px 0 rgba(255,255,255,.2), inset 0 -1px 0 rgba(0,0,0,.2), 0 1px 2px rgba(0,0,0,.25));
+  @include box-shadow(
+    inset 0 1px 0 rgba(255,255,255,.2), 
+    inset 0 -1px 0 rgba(0,0,0,.2), 
+    0 1px 2px rgba(0,0,0,.25),
+    0 2px 10px rgba(0,0,0,0.5)
+  );
   &:hover {
     background-position: 0 -15px;
     color: $textColor;
