SEO metas and title

--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -2,7 +2,12 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>EntryDNS</title>
+    <title>EntryDNS free DNS service and dynamic DNS</title>
+    
+    <meta name="description" content="EntryDNS free DNS service and dynamic DNS" />
+    <meta name="keywords" content="DNS, free, service, dynamic, management, hosting" />
+    <meta name="author" content="EntryDNS Team" />
+    
     <%= stylesheet_link_tag    "application" %>
     <%= javascript_include_tag "application" %>
     <%= csrf_meta_tag %>
