--- a/app/views/fragments/_top.html.erb
+++ b/app/views/fragments/_top.html.erb
@@ -28,6 +28,7 @@
                 :related => "_clyfe:vaijab"
               } %>
         </li>
+        <li><%= link_to('News', Settings.news_link) %></li>
         <li><%= link_to('Donate', page_path('donate'), :data => {:pjax => '#main'}) %></li>
         <% if user_signed_in? %>
           <li><%= link_to('Help & Support', page_path('help'), :data => {:pjax => '#main'}) %></li>
