counter and middle notice

--- a/app/assets/stylesheets/pages/home.css.scss
+++ b/app/assets/stylesheets/pages/home.css.scss
@@ -27,11 +27,9 @@
     width: 50%;
     blockquote {
         font-style: italic;
-        font-size: 1.2em;
         font-family: Cambria, Georgia, serif;
         color: #333;
-        line-height: 1.4em;
-        margin-bottom: 30px;
+        margin-top: 0;
         strong {
             font-style: normal;
             font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
