--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -24,14 +24,14 @@
   <tr>
     <td>
       <blockquote>
-        * We are two geeks who built a free DNS service to fill a void in this space. <br />
-        * The service is free and we hope to support it on either a freemium model or some sort of affiliate sales.
+        We are two geeks who built a free DNS service to fill a void in this space.
+        The service is free and we hope to support it on either a freemium model or some sort of affiliate sales.
       </blockquote>
     </td>
     <td>
       <blockquote>
-        * Note that we just started it, and there are still things to be done, it's still a work in progress.<br />
-        * Nevertheless the service is at this point functional and there are people already using it.
+        Note that we just started it, and there are still things to be done, it's still a work in progress.
+        Nevertheless the service is at this point functional and there are people already using it.
       </blockquote>
     </td>
   </tr>
