--- a/app/views/pages/home/_headlines.html.erb
+++ b/app/views/pages/home/_headlines.html.erb
@@ -20,3 +20,10 @@
     Complete developers API's
   </li>
 </ul>
+
+<p style="text-align: center;">
+  Now serving: 
+  <em class="mk-point"><%= User.count %></em> users,
+  <em class="mk-point"><%= Domain.count %></em> domains and 
+  <em class="mk-point"><%= Record.count %></em> records!
+</p>
