--- a/app/views/pages/donate.html.erb
+++ b/app/views/pages/donate.html.erb
@@ -19,9 +19,9 @@
 
       <table class="donate-table">
         <tr class="curency">
-          <td>EUR</td>
-          <td>USD</td>
-          <td>GBP</td>
+          <td>&euro; EUR</td>
+          <td>$ USD</td>
+          <td>&pound; GBP</td>
         </tr>
         
         <tr>
