domain sharing, initial setup

--- a/app/assets/stylesheets/overrides.css.erb
+++ b/app/assets/stylesheets/overrides.css.erb
@@ -14,6 +14,11 @@
   text-shadow: none;
 }
 
+#main .block .content .active-scaffold th p {
+  font: bold 11px arial, sans-serif;
+  text-shadow: none;
+}
+
 body.errors #main .inner {
   margin-top: 15px;
 }
