--- a/app/views/domains/_list_record_columns.html.erb
+++ b/app/views/domains/_list_record_columns.html.erb
@@ -9,9 +9,9 @@
       <% column_value = 'Manage All Records (0)' if column_value == '-' %>
       <%= authorized ? render_list_column(column_value, column, record) : column_value %>
     </td>
-  <% elsif column.name == :ns_records %>
+  <% elsif column.name == :permissions %>
     <td class="<%= column_class(column, column_value, record) %>" >
-      <% column_value = 'Manage NS Records (0)' if column_value == '-' %>
+      <% column_value = 'Permissions (0)' if column_value == '-' %>
       <%= authorized ? render_list_column(column_value, column, record) : column_value %>
     </td>
   <% else %>
