highlight donations link

--- a/app/assets/stylesheets/theme/theme.css.scss
+++ b/app/assets/stylesheets/theme/theme.css.scss
@@ -146,6 +146,9 @@ hr {
         &:hover {
             text-decoration: underline;
         }
+        &.highlight {
+          color: yellow;
+        }
     }
 }
 #user-navigation ul li a:active img {
