--- a/app/views/fragments/_top.html.erb
+++ b/app/views/fragments/_top.html.erb
@@ -29,7 +29,7 @@
               } %>
         </li>
         <li><%= link_to('News', Settings.news_link) %></li>
-        <li><%= link_to('Donate', page_path('donate'), :data => {:pjax => '#main'}) %></li>
+        <li><%= link_to('Donate', page_path('donate'), :class => 'highlight', :data => {:pjax => '#main'}) %></li>
         <% if user_signed_in? %>
           <li><%= link_to('Help & Support', page_path('help'), :data => {:pjax => '#main'}) %></li>
           <li><%= link_to(current_user.email, edit_user_registration_path, :title => "IP: #{client_remote_ip}", :data => {:pjax => '#main'}) %></li>
