--- a/app/views/pages/donate.html.erb
+++ b/app/views/pages/donate.html.erb
@@ -3,7 +3,7 @@
     <div class="inner">
 
       <h1>Donate</h1>
-      
+
       <p>How do I contribute?</p>
 
       <p>
@@ -23,37 +23,37 @@
           <td>$ USD</td>
           <td>&pound; GBP</td>
         </tr>
-        
+
         <tr>
           <td>
-            
+
             <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
               <input type="hidden" name="cmd" value="_s-xclick">
-              <input type="hidden" name="hosted_button_id" value="7FQMY358VCKA6">
+              <input type="hidden" name="hosted_button_id" value="WJJWPYZBBBKUG">
               <input type="image" src="https://www.paypalobjects.com/en_US/GB/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal — The safer, easier way to pay online.">
               <img alt="" border="0" src="https://www.paypalobjects.com/en_GB/i/scr/pixel.gif" width="1" height="1">
             </form>
-            
+
           </td>
           <td>
-            
+
             <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
               <input type="hidden" name="cmd" value="_s-xclick">
-              <input type="hidden" name="hosted_button_id" value="7FQMY358VCKA6">
+              <input type="hidden" name="hosted_button_id" value="WJJWPYZBBBKUG">
               <input type="image" src="https://www.paypalobjects.com/en_US/GB/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal — The safer, easier way to pay online.">
               <img alt="" border="0" src="https://www.paypalobjects.com/en_GB/i/scr/pixel.gif" width="1" height="1">
             </form>
-            
+
           </td>
           <td>
-            
+
             <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
               <input type="hidden" name="cmd" value="_s-xclick">
-              <input type="hidden" name="hosted_button_id" value="7FQMY358VCKA6">
+              <input type="hidden" name="hosted_button_id" value="WJJWPYZBBBKUG">
               <input type="image" src="https://www.paypalobjects.com/en_US/GB/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal — The safer, easier way to pay online.">
               <img alt="" border="0" src="https://www.paypalobjects.com/en_GB/i/scr/pixel.gif" width="1" height="1">
             </form>
-            
+
           </td>
         </tr>
       </table>
