--- a/app/views/fragments/_bottom.html.erb
+++ b/app/views/fragments/_bottom.html.erb
@@ -7,6 +7,7 @@
       <%= link_to('Contact', page_path('contact'), :data => {:pjax => '#main'}) %> &bull;
       <%= link_to('About', page_path('about'), :data => {:pjax => '#main'}) %> &bull;
       <%= link_to("&copy; #{Time.now.year} EntryDNS Team".html_safe, page_path('team'), :data => {:pjax => '#main'}) %>
+      <%= switch_user_select %>
     </p>
   </div>      
 </div>
