domains links, refactor

--- a/app/assets/stylesheets/overrides.css.erb
+++ b/app/assets/stylesheets/overrides.css.erb
@@ -26,6 +26,7 @@ body.errors #main .inner {
 #as_domains-active-scaffold .name-column, 
 #as_hosts-active-scaffold .name-column {
   font-weight: bold;
+  text-shadow: none;
 }
 
 .flash .alert {
