--- a/app/views/domains/_form_association_footer.html.erb
+++ b/app/views/domains/_form_association_footer.html.erb
@@ -1,5 +1,4 @@
-<%
-# hide "Replace  with new" for SOA record
+<% # hide "Replace with new" for SOA record
 
 begin
   remote_controller = active_scaffold_controller_for(column.association.klass)
