--- a/app/assets/stylesheets/bootstrap/bootstrap.scss
+++ b/app/assets/stylesheets/bootstrap/bootstrap.scss
@@ -12,7 +12,7 @@
   *margin-left: 0;
 }
 .icon.white {
-  background-image: url(../img/glyphicons-halflings-white.png);
+  background-image: url(image-path('bootstrap/glyphicons-halflings-white.png'));
 }
 .icon.glass {
   background-position: 0      0;
