--- a/app/views/fragments/_top.html.erb
+++ b/app/views/fragments/_top.html.erb
@@ -5,8 +5,16 @@
       <ul class="wat-cf">
         <% if user_signed_in? %>
           <li><%#= link_to('Dashboard', dashboard_path, :data => {:pjax => '#main'}) %></li>
-          <li><%= link_to 'My Domains', domains_path, :data => {:pjax => '#main'} %></li>
-          <li><%= link_to 'Dynamic Hosts', hosts_path, :data => {:pjax => '#main'} %></li>
+          <li>
+            <%= link_to domains_path, :data => {:pjax => '#main'} do %>
+              <i class="icon white th-list"></i> My Domains
+            <% end %>
+          </li>
+          <li>
+            <%= link_to hosts_path, :data => {:pjax => '#main'} do %>
+              <i class="icon white th"></i> Dynamic Hosts
+            <% end %>
+          </li>
         <% else %>
           <li><%= link_to('Home', root_path, :data => {:pjax => '#main'}) %></li>
           <li><%= link_to('About', page_path('about'), :data => {:pjax => '#main'}) %></li>
@@ -28,15 +36,44 @@
               :related => "_clyfe:vaijab"
             } %>
         </li>
-        <li><%= link_to('News', Settings.news_link) %></li>
-        <li><%= link_to('Donate', page_path('donate'), :class => 'highlight', :data => {:pjax => '#main'}) %></li>
+        <li>
+          <%= link_to(Settings.news_link, :rel => 'tooltip', :title => Settings.news_link) do %>
+            <i class="icon white share-alt"></i> News
+          <% end %>
+        </li>
+        <li>
+          <%= link_to(page_path('donate'), :class => 'highlight', :data => {:pjax => '#main'}) do %>
+            <i class="icon white heart"></i> Donate
+          <% end %>
+        </li>
         <% if user_signed_in? %>
-          <li><%= link_to('Help & Support', page_path('help'), :data => {:pjax => '#main'}) %></li>
-          <li><%= link_to(current_user.email, edit_user_registration_path, :title => "IP: #{client_remote_ip}", :data => {:pjax => '#main'}) %></li>
-          <li><%= link_to('Sign out', destroy_user_session_path, :method => :delete) %></li>
+          <li>
+            <%= link_to(page_path('help'), :data => {:pjax => '#main'}) do %>
+              <i class="icon white question-sign"></i> Help & Support
+            <% end %>
+          </li>
+          <li>
+            <%= link_to(edit_user_registration_path, :rel => 'tooltip', 
+              :title => "IP: #{client_remote_ip}",:data => {:pjax => '#main'}) do %>
+              <i class="icon white user"></i> <%= current_user.email %>
+            <% end %>
+          </li>
+          <li>
+            <%= link_to(destroy_user_session_path, :method => :delete) do %>
+              <i class="icon white off"></i> Sign out
+            <% end %>
+          </li>
         <% else %>
-          <li><%= link_to('Sign up', new_user_registration_path, :data => {:pjax => '#main'}) %></li>
-          <li><%= link_to('Sign in', new_user_session_path, :data => {:pjax => '#main'}) %></li>
+          <li>
+            <%= link_to(new_user_registration_path, :data => {:pjax => '#main'}) do %>
+              <i class="icon white arrow-up"></i> Sign up
+            <% end %>
+          </li>
+          <li>
+            <%= link_to(new_user_session_path, :data => {:pjax => '#main'}) do %>
+              <i class="icon white arrow-right"></i> Sign in
+            <% end %>
+          </li>
         <% end %>
       </ul>
     </div>
