--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -3,9 +3,7 @@
 * and any sub-directories. You're free to add application-wide styles to this file and they'll appear at
 * the top of the compiled file, but it's generally better to create a new file per style scope.
 
-*= require normalize
-
-*= require bootstrap/bootstrap
+*= require_self
 
 *= require theme/base
 *= require theme/theme
@@ -20,11 +18,9 @@
 *= require pages/contact
 *= require pages/donate
 
-*= require active_scaffold_layout
-*= require active_scaffold_default
-*= active_scaffold_colors 
-
-*= require overrides
 *= require slides
-*= require_self
 */
+
+@import "twitter/bootstrap";
+@import "active_scaffold";
+@import "overrides";
