--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -7,19 +7,19 @@
       <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
         <%= devise_error_messages! %>
 
-        <div><%= f.label :first_name %><br />
+        <div><%= f.label :first_name %>
           <%= f.text_field :first_name %></div>
 
-        <div><%= f.label :last_name %><br />
+        <div><%= f.label :last_name %>
           <%= f.text_field :last_name %></div>
 
-        <div><%= f.label :email %><br />
+        <div><%= f.label :email %>
           <%= f.email_field :email %></div>
 
         <div><%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
           <%= f.password_field :password %></div>
 
-        <div><%= f.label :password_confirmation %><br />
+        <div><%= f.label :password_confirmation %>
           <%= f.password_field :password_confirmation %></div>
 
         <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
