--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,25 +3,24 @@
     <h2>Sign up</h2>
     <div class="content login">
 
-
       <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
         <%= devise_error_messages! %>
       
         <%= honeypot %>
 
-        <div><%= f.label :first_name %><br />
+        <div><%= f.label :first_name %>
           <%= f.text_field :first_name %></div>
 
-        <div><%= f.label :last_name %><br />
+        <div><%= f.label :last_name %>
           <%= f.text_field :last_name %></div>
 
-        <div><%= f.label :email %><br />
+        <div><%= f.label :email %>
           <%= f.email_field :email %></div>
 
-        <div><%= f.label :password %><br />
-          <%= f.password_field :password %></div>
+        <div><%= f.label :password %>
+          <%= f.password_field :password %>
 
-        <div><%= f.label :password_confirmation %><br />
+        <div><%= f.label :password_confirmation %>
           <%= f.password_field :password_confirmation %></div>
 
         <div><%= f.submit "Sign up" %></div>
