--- a/app/views/fragments/_top.html.erb
+++ b/app/views/fragments/_top.html.erb
@@ -7,12 +7,12 @@
           <li><%#= link_to('Dashboard', dashboard_path, :data => {:pjax => '#main'}) %></li>
           <li>
             <%= link_to domains_path, :data => {:pjax => '#main'} do %>
-              <i class="icon white th-list"></i> My Domains
+              <i class="icon-white icon-th-list"></i> My Domains
             <% end %>
           </li>
           <li>
             <%= link_to hosts_path, :data => {:pjax => '#main'} do %>
-              <i class="icon white th"></i> Dynamic Hosts
+              <i class="icon-white icon-th"></i> Dynamic Hosts
             <% end %>
           </li>
         <% else %>
@@ -38,40 +38,41 @@
         </li>
         <li>
           <%= link_to(Settings.news_link, :rel => 'tooltip', :title => Settings.news_link) do %>
-            <i class="icon white share-alt"></i> News
+            <i class="icon-white icon-share-alt"></i> News
           <% end %>
         </li>
         <li>
-          <%= link_to(page_path('donate'), :class => 'highlight', :data => {:pjax => '#main'}) do %>
-            <i class="icon white heart"></i> Donate
+          <%= link_to(page_path('donate'), :rel => 'tooltip', :title => 'PayPal',
+            :class => 'highlight', :data => {:pjax => '#main'}) do %>
+            <i class="icon-white icon-heart"></i> Donate
           <% end %>
         </li>
         <% if user_signed_in? %>
           <li>
             <%= link_to(page_path('help'), :data => {:pjax => '#main'}) do %>
-              <i class="icon white question-sign"></i> Help & Support
+              <i class="icon-white icon-question-sign"></i> Help & Support
             <% end %>
           </li>
           <li>
             <%= link_to(edit_user_registration_path, :rel => 'tooltip', 
               :title => "IP: #{client_remote_ip}",:data => {:pjax => '#main'}) do %>
-              <i class="icon white user"></i> <%= current_user.email %>
+              <i class="icon-white icon-user"></i> <%= current_user.email %>
             <% end %>
           </li>
           <li>
             <%= link_to(destroy_user_session_path, :method => :delete) do %>
-              <i class="icon white off"></i> Sign out
+              <i class="icon-white icon-off"></i> Sign out
             <% end %>
           </li>
         <% else %>
           <li>
             <%= link_to(new_user_registration_path, :data => {:pjax => '#main'}) do %>
-              <i class="icon white arrow-up"></i> Sign up
+              <i class="icon-white icon-arrow-up"></i> Sign up
             <% end %>
           </li>
           <li>
             <%= link_to(new_user_session_path, :data => {:pjax => '#main'}) do %>
-              <i class="icon white arrow-right"></i> Sign in
+              <i class="icon-white icon-arrow-right"></i> Sign in
             <% end %>
           </li>
         <% end %>
